--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /Datastrucutre-2a/nbproject/private/
+/Datastrucutre-2a/build/
+/Datastrucutre-2a/dist/
