--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ Temporary Items
 /Datastrucutre-2a/nbproject/private/
 /Datastrucutre-2a/build/
 /Datastrucutre-2a/dist/
+/MVCScretch/nbproject/private/
+/MVCScretch/build/
